feat: add gallery API title filtering
